# shastra23

./: .gitignore  .gitmodules  README.md
aruco_detector/: CMakeLists.txt  package.xml
aruco_detector/include/: aruco_detector.hpp
aruco_detector/launch/: aruco_node.launch
aruco_detector/msg/: aruco_detected.msg  aruco_message.msg
aruco_detector/src/: aruco_detector.cpp  aruco_detector_node.cpp
color_detector/include/: color_detector.hpp
color_detector/src/: color_detector.cpp  color_detector_node.cpp
ocam/config/: camera.yaml
ocam/launch/: ocam_ros.launch
ocam/src/: oCam.cpp  withrobot_camera.cpp  withrobot_utility.cpp
pose_estimator/: CMakeLists.txt  package.xml
pose_estimator/launch/: generate_pose.launch
pose_estimator/msg/: pose_message.msg
pose_estimator/src/: pose.cpp  pose_estimator.cpp
shastra_description/: CMakeLists.txt  package.xml
shastra_description/launch/: spawn_box.launch  spawn_mav.launch
shastra_description/urdf/: aruco_.urdf  depth_camera.xacro  magnet.xacro  mav.xacro
shastra_detection/: CMakeLists.txt  package.xml
shastra_detection/launch/: shastra_detection.launch
shastra_detection/src/: package_detector.cpp
shastra_emag/: README.md  emag_switch.ino
shastra_gazebo/: CMakeLists.txt  package.xml
shastra_gazebo/launch/: default.launch  mav_hovering.launch  shastra_main.launch
shastra_gazebo/src/: hovering_example.cpp
shastra_gazebo/worlds/: shastra_world.world
shastra_gazebo_plugins/shastra_magnet_plugin/: CMakeLists.txt  package.xml
shastra_gazebo_plugins/shastra_magnet_plugin/include/shastra_magnet_plugin/: dipole_magnet.hpp  dipole_magnet_container.hpp
shastra_gazebo_plugins/shastra_magnet_plugin/src/: dipole_magnet.cpp
shastra_gazebo_plugins/shastra_velodyne/: CMakeLists.txt  package.xml
shastra_msgs/: CMakeLists.txt  package.xml
shastra_planner/: CMakeLists.txt  dump.txt  package.xml
(+28 files in other folders)
